GNOME Bugzilla – Bug 661617
st-texture-cache: Fix a minor crash when computing our border-radius
Last modified: 2011-10-14 19:08:42 UTC
Just a minor crash that I don't think affects anything today.
Created attachment 198895 [details] [review] st-texture-cache: Fix a minor crash when computing our border-radius If we add a 0-sized actor with a border-radius, we will crash as we try to allocate a 0-sized texture in Cogl. Bail out early instead of doing that.
Review of attachment 198895 [details] [review]: Looks fine, thanks.
*** Bug 661795 has been marked as a duplicate of this bug. ***