src/st/st-theme-node-drawing.c
@@ -342,12 +342,13 @@ st_theme_node_lookup_corner (StThemeNode    *node,
   StCornerSpec corner;
   guint radius[4];
 
-  if (node->border_radius[corner_id] == 0)
-    return COGL_INVALID_HANDLE;
-
   cache = st_texture_cache_get_default ();
 
   st_theme_node_reduce_border_radius (node, radius);
+
+  if (radius[corner_id] == 0)
+    return COGL_INVALID_HANDLE;
+
   corner.radius = radius[corner_id];
   corner.color = node->background_color;
   st_theme_node_get_corner_border_widths (node, corner_id,
